#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_psana
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-12
2012-10-10 Andy Salnikov
- fix for padding after last attribute
- regenerate whole thing from psddl V00-02-08 and psddldata V00-03-10

Tag: V00-03-11
2012-10-08 Andy Salnikov
- upgrading to pdsdata V04-02-01
- regenerate whole thing from psddldata V00-03-09

Tag: V00-03-10
2012-09-28 Andy Salnikov
- upgrading to pdsdata V04-01-00
- regenerate whole thing from psddldata V00-03-08

Tag: V00-03-09
2012-07-24 Andy Salnikov
- acqiris.ddl: bug fix in Timestamp::value() method
- regenerate whole thing from psddldata V00-03-07

Tag: V00-03-07
2012-07-06 Andy Salnikov
- upgrading to pdsdata V03-07-10
- regenerate whole thing from psddldata V00-03-06

Tag: V00-03-06
2012-06-26 Andy Salnikov
- Encoder.DataV[12]: added value() method
- regenerate whole thing from psddldata V00-03-05

Tag: V00-03-05
2012-06-22 Andy Salnikov
- EvrData.EventCodeV5: one member method was incorrectly named
- regenerate whole thing from psddldata V00-03-04

Tag: V00-03-04
2012-06-03 Andy Salnikov
- upgrading to pdsdata V03-07-07
- regenerate whole thing from psddldata V00-03-03

Tag: V00-03-02
2012-05-11 Andy Salnikov
- upgrading to pdsdata V03-07-00
- regenerate whole thing from psddldata V00-03-02

Tag: V00-03-01
2012-05-03 Andy Salnikov
- upgrading to pdsdata V03-06-00
- regenerate whole thing from psddldata V00-03-01

Tag: V00-03-00
2012-05-02 Andy Salnikov
- regenerate whole thing from psddldata V00-03-00 with psddl V00-02-01

Tag: V00-02-05
2012-05-01 Andy Salnikov
- regenerate whole thing from psddldata V00-02-04
- new class epics.ConfigV1

Tag: V00-02-04
2012-03-27 Andy Salnikov