@@ -1,0 +1,15 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <cstddef>
+#include "psddl_psana/andor.ddl.h"
+namespace Psana {
+namespace Andor {
+
+ConfigV1::~ConfigV1() {}
+
+
+FrameV1::~FrameV1() {}
+
+} // namespace Andor
+} // namespace Psana
