@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-13
+2012-10-23 Andy Salnikov
+- upgrading to pdsdata V04-02-07
+- regenerate whole thing from psddldata V00-03-11
+
 Tag: V00-03-12
 2012-10-10 Andy Salnikov
 - fix for padding after last attribute
